devops/progetto_springbootesempio/springbootapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testkub-app
spec:
  selector:
      matchLabels:
        app: testkub-app
  replicas: 1
  template:
    metadata:
      labels:
        app: testkub-app
    spec:
      containers:
        - name: testkub-app
          image: testkub:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8081
---
kind: Service
apiVersion: v1
metadata:
  name: testkub-service
spec:
  selector:
    app: testkub-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8081
    nodePort: 30081
  type: NodePort
