devops/progetto_springbootesempio/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.sitodskij.com
    http:
      paths:
      - path: /*
        pathType: Exact  
        backend:
          service:
            name: testkub-service
            port: 
              number: 8080
