devops/progetto_springbootesempio/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: demo.com
    http:
      paths:
      - path: /
        pathType: Exact  
        backend:
          service:
            name: testkub-service
            port: 
              number: 8080
